--- a/restart_server/src/pages/Login/style.css
+++ b/restart_server/src/pages/Login/style.css
@@ -1,3 +1,15 @@
+@media screen and (max-width: 480px) {
+  body {
+   
+  }
+  .input-login {
+    width: 100% !important;
+    padding: 0;
+    background: white;
+  }
+
+}
+
 .container-Login {
   background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 0%, rgba(0, 212, 255, 1) 100%);
   height: 100vh;
@@ -47,10 +59,11 @@
   font-size: 1.2em;
 }
 .container-input-login {
-  background-color: rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+  /* background-color: rgba(0, 0, 0, 0.1); */
+  /* border-radius: 10px; */
+  /* background: #f1f1f1; */
+  text-align: center;
   margin: 25px 0;
-  display: flex;
 }
 .icon-input {
   justify-content: center;
@@ -60,15 +73,19 @@
   color: white;
 }
 .input-login {
-  padding: 15px 20px;
-  background: none;
+  padding: 15px 0px;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.1);
   border: none;
-  width: 420px;
+  /* width: 460px; */
+  width: 100%;
+  border-radius: 10px;
   font-size: 0.85em;
   color: white;
 }
 .input-login:focus {
   outline: none;
+  /* background: none; */
 }
 
 .fa-user,
